third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/partial_eq/union.rs
#[derive(derive_more::PartialEq)]
union IntOrFloat {
    i: u32,
}

fn main() {}
